[gd_scene load_steps=67 format=3 uid="uid://d0e66fjqipx1f"]

[ext_resource type="Texture2D" uid="uid://cqqrqk76s7fnh" path="res://Assets/Assets_PixelAdventure/Assets_PixelAdventure/Enemies/Turtle/Hit (44x26).png" id="1_dunx5"]
[ext_resource type="Script" path="res://Scenes/Enemies/Turtle/enemy_turtle.gd" id="1_ijqru"]
[ext_resource type="Texture2D" uid="uid://n311nc4qf1ye" path="res://Assets/Assets_PixelAdventure/Assets_PixelAdventure/Enemies/Turtle/Idle 2 (44x26).png" id="2_f28xk"]
[ext_resource type="Texture2D" uid="uid://227ob30u73gh" path="res://Assets/Assets_PixelAdventure/Assets_PixelAdventure/Enemies/Turtle/Idle 1 (44x26).png" id="3_5o7n4"]
[ext_resource type="Texture2D" uid="uid://dgx8et2fqhieq" path="res://Assets/Assets_PixelAdventure/Assets_PixelAdventure/Enemies/Turtle/Spikes in (44x26).png" id="4_w3xj2"]
[ext_resource type="Texture2D" uid="uid://bsrvq2pikjfm" path="res://Assets/Assets_PixelAdventure/Assets_PixelAdventure/Enemies/Turtle/Spikes out (44x26).png" id="5_cpdtm"]
[ext_resource type="PackedScene" uid="uid://b8ugwomja0wok" path="res://Scenes/Enemies/hitbox.tscn" id="6_tr30g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a3l8t"]
atlas = ExtResource("1_dunx5")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_haix2"]
atlas = ExtResource("1_dunx5")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_afraq"]
atlas = ExtResource("1_dunx5")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6n3t"]
atlas = ExtResource("1_dunx5")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bgtc"]
atlas = ExtResource("1_dunx5")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiic5"]
atlas = ExtResource("2_f28xk")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcueg"]
atlas = ExtResource("2_f28xk")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdt22"]
atlas = ExtResource("2_f28xk")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_egyau"]
atlas = ExtResource("2_f28xk")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnxx8"]
atlas = ExtResource("2_f28xk")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_p34hi"]
atlas = ExtResource("2_f28xk")
region = Rect2(220, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8cf8"]
atlas = ExtResource("2_f28xk")
region = Rect2(264, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_df1no"]
atlas = ExtResource("2_f28xk")
region = Rect2(308, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttwjf"]
atlas = ExtResource("2_f28xk")
region = Rect2(352, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjwqv"]
atlas = ExtResource("2_f28xk")
region = Rect2(396, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a26t"]
atlas = ExtResource("2_f28xk")
region = Rect2(440, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn1tb"]
atlas = ExtResource("2_f28xk")
region = Rect2(484, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm3sn"]
atlas = ExtResource("2_f28xk")
region = Rect2(528, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6xoe"]
atlas = ExtResource("2_f28xk")
region = Rect2(572, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvo16"]
atlas = ExtResource("3_5o7n4")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3iro"]
atlas = ExtResource("3_5o7n4")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujxfc"]
atlas = ExtResource("3_5o7n4")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdk54"]
atlas = ExtResource("3_5o7n4")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_uylcs"]
atlas = ExtResource("3_5o7n4")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_py2p1"]
atlas = ExtResource("3_5o7n4")
region = Rect2(220, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd2qk"]
atlas = ExtResource("3_5o7n4")
region = Rect2(264, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_nll2f"]
atlas = ExtResource("3_5o7n4")
region = Rect2(308, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_huhft"]
atlas = ExtResource("3_5o7n4")
region = Rect2(352, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vwuk"]
atlas = ExtResource("3_5o7n4")
region = Rect2(396, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_luqd8"]
atlas = ExtResource("3_5o7n4")
region = Rect2(440, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnpca"]
atlas = ExtResource("3_5o7n4")
region = Rect2(484, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxwr1"]
atlas = ExtResource("3_5o7n4")
region = Rect2(528, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_71sup"]
atlas = ExtResource("3_5o7n4")
region = Rect2(572, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0no18"]
atlas = ExtResource("4_w3xj2")
region = Rect2(308, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgoku"]
atlas = ExtResource("4_w3xj2")
region = Rect2(264, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3l50"]
atlas = ExtResource("4_w3xj2")
region = Rect2(220, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7qyq"]
atlas = ExtResource("4_w3xj2")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7klx4"]
atlas = ExtResource("4_w3xj2")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8dgj"]
atlas = ExtResource("4_w3xj2")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1o11"]
atlas = ExtResource("4_w3xj2")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_af2ro"]
atlas = ExtResource("4_w3xj2")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_680bp"]
atlas = ExtResource("5_cpdtm")
region = Rect2(308, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_whmr6"]
atlas = ExtResource("5_cpdtm")
region = Rect2(264, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2b1u"]
atlas = ExtResource("5_cpdtm")
region = Rect2(220, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8hs7"]
atlas = ExtResource("5_cpdtm")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1x1n"]
atlas = ExtResource("5_cpdtm")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_taadj"]
atlas = ExtResource("5_cpdtm")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyyws"]
atlas = ExtResource("5_cpdtm")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_odxcf"]
atlas = ExtResource("5_cpdtm")
region = Rect2(0, 0, 44, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_v3of4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3l8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haix2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afraq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6n3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bgtc")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiic5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcueg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdt22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egyau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnxx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p34hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8cf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df1no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttwjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjwqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a26t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn1tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm3sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6xoe")
}],
"loop": true,
"name": &"idle_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvo16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3iro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujxfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdk54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uylcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py2p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd2qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nll2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huhft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vwuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luqd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnpca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxwr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71sup")
}],
"loop": true,
"name": &"idle_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0no18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgoku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3l50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7qyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7klx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8dgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1o11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af2ro")
}],
"loop": true,
"name": &"spikes_in",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_680bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whmr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2b1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8hs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1x1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taadj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyyws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odxcf")
}],
"loop": true,
"name": &"spikes_out",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pesjy"]
size = Vector2(18, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ix2jl"]
size = Vector2(21, 13)

[sub_resource type="Animation" id="Animation_cn5e0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_v3of4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_alya8"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_v3of4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hit"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationPlayer:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_530wv"]
resource_name = "idle"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_v3of4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_27at5"]
resource_name = "idle_spikes"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_v3of4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_2"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 8, 9, 10, 11, 12, 13]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.517227),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_cdbao"]
resource_name = "spikes_in"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_v3of4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"spikes_in"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}

[sub_resource type="Animation" id="Animation_3wl66"]
resource_name = "spikes_out"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("SpriteFrames_v3of4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"spikes_out"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rsqac"]
_data = {
"RESET": SubResource("Animation_cn5e0"),
"hit": SubResource("Animation_alya8"),
"idle": SubResource("Animation_530wv"),
"idle_spikes": SubResource("Animation_27at5"),
"spikes_in": SubResource("Animation_cdbao"),
"spikes_out": SubResource("Animation_3wl66")
}

[node name="enemy_turtle" type="CharacterBody2D" groups=["floor_enemy"]]
collision_layer = 4
script = ExtResource("1_ijqru")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.11758e-22, -11)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_v3of4")
animation = &"idle_1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.999998, -11)
rotation = 1.5708
shape = SubResource("RectangleShape2D_pesjy")
disabled = true
debug_color = Color(1, 0, 0, 0.419608)

[node name="Hitbox" parent="." instance=ExtResource("6_tr30g")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, -9.5)
shape = SubResource("RectangleShape2D_ix2jl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rsqac")
}
autoplay = "idle"
speed_scale = 2.0

[node name="State_Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="State_Timer" to="." method="_on_state_timer_timeout"]
